--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+    <!-- Botones con las clases CSS -->
+<div class="search-buttons">
+    <button class="btn btn-primary" onclick="buscarLibros()">
+        🔍 Buscar
+    </button>
+    <button class="btn btn-secondary" onclick="limpiarFiltros()">
+        🗑️ Limpiar
+    </button>
+</div>
+
+<!-- Resto de elementos... -->
+<input type="text" id="buscarTexto">
+<select id="filtroAutor">
+    <option value="">Todos los autores</option>
+</select>
+<!-- ... otros campos ... -->
+<div id="divLibros"></div>
+<div id="paginacion"></div>
     <div class="container">
         <h1>Biblioteca On line</h1>
         <div class="libros" id="divLibros">
